--- a/content/contact.html
+++ b/content/contact.html
@@ -18,20 +18,20 @@
             <div class="col-md-8">
                 <div class="row bg-color-name-title">
                     <div class="heading">
-                        <h1 class="name">Daniel Ellis</h1>
+                        <h1 class="name">Rosie Odenkirk</h1>
                         <h2 class="title">Full Stack Software Developer</h2>
                     </div>
                 </div>
                 <div class="row">
                     <ul id="nav" class="list-inline clearfix">
                         <li class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                            <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-resume menuitem">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                            <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
+                            <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-download menuitem">
                             <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
