--- a/content/contact.html
+++ b/content/contact.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale-1">
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_JtqalncmyAjEgf84ghpQ9");
+        })();
+    </script>
+
 </head>
 
 
@@ -23,7 +30,7 @@
                     </div>
                 </div>
                 <div class="row">
-                                        <ul id="nav" class="list-inline clearfix">
+                    <ul id="nav" class="list-inline clearfix">
                         <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
                             <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                         </li>
@@ -55,7 +62,7 @@
                 <h5 class="uppercase text-center">Let's work together! </h5>
             </div>
             <div class="center-form">
-                <form>
+                <form onsubmit="return sendMail(this);" method="POST">
                     <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
                     <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
                     <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
@@ -126,7 +133,7 @@
         </div>
 
     </footer>
-
+<script src="../assets/js/sendEmail.js"></script>
 
 </body>
 
